tree-sitter-hzml/test/corpus/blocks.txt
================
Server and template blocks
================

<server>
  hzml.get((request) => {
    return { title: "Home" }
  })
</server>

<template>
  <h1>${title}</h1>
</template>

---

(source_file
  (server_block
    (server_content))
  (template_block
    (template_text)
    (htm_expression
      (expression_content))
    (template_text)))

================
Template only
================

<template>
  <p>Hello world</p>
</template>

---

(source_file
  (template_block
    (template_text)))

================
Server only
================

<server>
  hzml.db.run("CREATE TABLE IF NOT EXISTS posts (id INTEGER PRIMARY KEY, title TEXT)")
</server>

---

(source_file
  (server_block
    (server_content)))

================
Template with HTML closing tags
================

<template>
  <div class="container">
    <h1>Title</h1>
    <p>Paragraph</p>
  </div>
</template>

---

(source_file
  (template_block
    (template_text)))

================
Template with components
================

<template>
  <${Link} href="/about">About<//>
  <${Form} action="/todos">
    <input type="text" name="title" />
    <button type="submit">Add</button>
  <//>
</template>

---

(source_file
  (template_block
    (template_text)
    (htm_component
      (htm_tag_name
        (expression_content))
      (htm_attribute
        (htm_attribute_name)
        (htm_quoted_value)))
    (template_text)
    (htm_close_tag)
    (template_text)
    (htm_component
      (htm_tag_name
        (expression_content))
      (htm_attribute
        (htm_attribute_name)
        (htm_quoted_value)))
    (template_text)
    (htm_close_tag)
    (template_text)))

================
Empty blocks
================

<server></server>

<template></template>

---

(source_file
  (server_block)
  (template_block))

================
Loader and template (component)
================

<loader>
  const items = hzml.db.query("SELECT * FROM items WHERE category = ?", [category])
  return { items }
</loader>

<template>
  <ul>
    ${items.map(item => html`<li>${item.name}</li>`)}
  </ul>
</template>

---

(source_file
  (loader_block
    (loader_content))
  (template_block
    (template_text)
    (htm_expression
      (expression_content))
    (template_text)))

================
Loader only (component with string return)
================

<loader>
  if (!id) return "<p>No ID provided</p>"
</loader>

<template>
  <p>${id}</p>
</template>

---

(source_file
  (loader_block
    (loader_content))
  (template_block
    (template_text)
    (htm_expression
      (expression_content))
    (template_text)))

================
Self-closing component with expression attribute
================

<template>
  <${TodoCount} useLabel={true} class="font-semibold" />
</template>

---

(source_file
  (template_block
    (template_text)
    (htm_component
      (htm_tag_name
        (expression_content))
      (htm_attribute
        (htm_attribute_name)
        (htm_expression_value
          (expression_content)))
      (htm_attribute
        (htm_attribute_name)
        (htm_quoted_value)))
    (template_text)))

================
Component close with tag name
================

<template>
  <${Modal} title="Settings">
    <p>Content</p>
  </${Modal}>
</template>

---

(source_file
  (template_block
    (template_text)
    (htm_component
      (htm_tag_name
        (expression_content))
      (htm_attribute
        (htm_attribute_name)
        (htm_quoted_value)))
    (template_text)
    (htm_close_tag
      (htm_tag_name
        (expression_content)))
    (template_text)))
